[project]
name = "data_elements"
version = "0.1.0"
description = "Data processing and testing project using pandas, polars, and duckdb"
authors = [
    { name = "Michael Dedic", email = "dev.michael.dedic@gmail.com" }
]
requires-python = ">=3.14"

dependencies = [
    "pandas>=3.0",
    "polars>=1.42",
    "duckdb>=1.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"
